# CrawJUD-Reestruturado

./: .gitignore  .pre-commit-config.yaml  Diagrama sem nome.drawio  PROJECT-STRUCTURE.md  README.md  _apicrawjud.py  _crawjudapp.py  _teste.py  cache_bots.json  config.py  ecosystem.config.js  index.html  lab.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  sonar-project.properties
.github/: copilot-commit-message-instructions.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: build.yml  pre-commit.yml
.pipelines/: Feat - Robô Capa PJe.md
.sonarlint/: connectedMode.json
addons/: recaptcha.py
addons/assinador/: __init__.py  load_jvm.py  py_assinador.py  test.py
addons/logger/: __init__.py
addons/printlogs/: __init__.py  _async.py  _interface.py  _master.py  _normal.py
addons/storage/: __init__.py  _bucket.py  types_storage.py
addons/types/: __init__.py
api/: __init__.py  __main__.py  _main.py  middleware.py  quartconf.py  readme.md  wrapper.py
api/addons/: __init__.py  colors.py  readme.md
api/common/: __init__.py
api/constructor/: file.py
api/decorators/: __init__.py  api.py
api/domains/: file_service.py
api/interface/: credentials.py  session.py
api/models/: __init__.py  bots.py  export.json  logs.py  readme.md  schedule.py  secondaries.py  users.py
api/namespaces/: __init__.py  bots.py  files.py  logs.py  notifications.py  system.py
api/routes/: __init__.py  auth.py  credentials.py  dashboard.py
api/types/: __init__.py
celery/: tasks.py
celery_app/: ENVIRONMENT-VARIABLES.md  README.md  __init__.py  __main__.py  _wrapper.py  celeryconf.py  main.py  tasks.py  wrapper.py
celery_app/abstract/: _head.py  _master.py  _properties.py  bot.py
celery_app/addons/: mail.py  readme.md
celery_app/bots/: __init__.py
celery_app/custom/: README.md  _canvas.py  _celery.py  _task.py
celery_app/exceptions/: README.md  __init__.py  mail.py  readme.md
celery_app/resources/: README.md  __init__.py  load_config.py  readme.md
celery_app/tasks/: README.md  __init__.py  _email.py  bot.py  email.py  files.py  message.py  readme.md
celery_app/types/: README.md  __init__.py  _celery.py  elements.py  pje.py  readme.md
common/: bot.py
controllers/: readme.md
controllers/bots/: esaj.py  pje.py  projudi.py
coverage/: coverage.xml
coverage-reports/: coverage.xml
crawjud/: ENVIRONMENT-VARIABLES.md  README.md  __init__.py  __main__.py  _apicrawjud.py  _crawjudapp.py  _wrapper.py  api.py  app.py  bot.py  celery_app.py  main.py  quartconf.py  readme.md  wrapper.py
crawjud/abstract/: _buscador.py  _head.py  _master.py  _properties.py
crawjud/addons/: __init__.py  interator.py  readme.md
crawjud/bots/: __init__.py  readme.md
crawjud/common/: __init__.py  bot.py  cities_amazonas.json
crawjud/core/: __init__.py  _dictionary.py  _properties.py  master.py  readme.md
crawjud/custom/: __init__.py  canvas.py  celery.py  task.py
crawjud/decorators/: __init__.py  api.py  bot.py
crawjud/exceptions/: __init__.py  bot.py  elaw.py  readme.md
crawjud/interface/: __init__.py
crawjud/interfaces/: __init__.py  session.py
crawjud/models/: __init__.py  bots.py  export.json  export.json.bkp  secondaries.py  users.py
crawjud/routes/: __init__.py  auth.py  credentials.py  dashboard.py
crawjud/tasks/: README.md  __init__.py  files.py  message.py
crawjud/types/: __init__.py  bot.py  pje.py  readme.md
crawjud_app/: README.md  __init__.py  __main__.py  _wrapper.py  iterators.py  main.py
examples/: abstracoes.py  extrai_dados_redis.py
interfaces/: __init__.py
java/: io.py  io.pyi  lang.pyi  security.py  security.pyi  util.pyi
models/: logs.py
patches/: patch_numpy.py  run_numpy.py
socketio_server/: __init__.py  __main__.py  namespaces.py  readme.md
tasks/: __init__.py  bot.py  files.py  message.py
tests/: __init__.py  celery_crawjud_test.py  dummy.py  lab.py  patch_numpy.py  test_decorator_bot_wrap_cls.py  test_decorator_bot_wrap_init.py  test_formata_data_utils_logs.py  test_message_log_model.py  test_recaptcha.py  test_types_storage.py  test_utils_logger.py  test_utils_logger_handlers.py  test_utils_types.py
unused/: .dockerignore  .yamllint.yaml  compose.yml  test_gpt.py
utils/: recaptcha.py
webdriver/: __init__.py  _driver.py  _presets.py  _types.py  configure.py  web_element.py
(+446 files in other folders)
