[project]
name = "crawjud-reestruturado"
version = "0.1.0"
description = ""
authors = [
    {name = "Robotz213",email = "nicholas@robotz.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "quart-jwt-extended (>=0.1.0,<0.2.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "quart-cors (>=0.8.0,<0.9.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "openai (>=1.78.1,<2.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "google-auth (>=2.40.1,<3.0.0)"
]
[tool.poetry]
package-mode = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
